--- a/portfolio_ideta/contact.html
+++ b/portfolio_ideta/contact.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaori's Portfolio</title>
+    <title>IdetaKaori's Portfolio</title>
     <link href="
     https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css
     " rel="stylesheet">
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/works_bn.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
     <script>
         (function (d) {
             var config = {
@@ -48,9 +47,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="sp_btn">
-                <div class="box"><span></span></div>
-            </div>
+            <div class="sp_btn"><span></span></div>
             <div class="sp_menu">
                 <div>
                     <div class="menu_portfolioname">
@@ -73,109 +70,74 @@
                     </div>
                 </div>
             </div>
-
+            <div class="fade-effect"></div>
         </div>
     </header>
 
     <!-- 左固定アニメーション -->
 
     <div class="top_portfolioname">
-        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.THANKS TO COMING. THIS IS THE
+            <span>IDETA KAORI’S PORTFORIO</span>.THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S
+                PORTFORIO</span>.THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.THANKS TO COMING.
+            THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S
+                PORTFORIO</span>.
+        </p>
     </div>
     <div class="bg"></div>
 
     <main data-scroll-container>
-
-        <!-- 一覧 -->
-
-        <section data-scroll-section class="scroll_section">
-
-            <!-- PC版 -->
-
-            <div class="pc_container wrapper">
-                <div class="contents">
-                    <a href="./works_bn_detail.html" class="img_square floatup">
-                        <img src="./images/bn_supaisukennkyuujyo_1.jpg">
-                    </a>
-                    <h2 class="ttl">スパイスカレー</h2>
-                </div>
-                <div class="contents">
-                    <a href="./works_bn_detail.html" class="img_w floatup">
-                        <img src="./images/bn_deluxeburger1.jpg">
-                    </a>
-                    <h2 class="ttl">デラックスバーガーの広告（POP風）</h2>
-                </div>
-                <div class="contents">
-                    <a href="./works_bn_detail.html" class="img_square floatup">
-                        <img src="./images/bn_deluxeburger2.jpg">
-                    </a>
-                    <h2 class="ttl">デラックスバーガーの広告（高級感）</h2>
-                </div>
-            </div>
-
-            <!-- SP版 -->
-
-            <div class="sp-container">
+        <section data-scroll-section class="scroll_section forth_section">
+            <div class="contact" id="contact">
                 <div class="wrapper">
-                    <div class="page_ttl">
-                        <p class="en">WORKS</p>
-                        <p class="en">BANNER</p>
-                    </div>
-                    <div class="inner">
-                        <div class="block">
-                            <div class="contents">
-                                <a href="./works_bn_detail.html" class="sp-img floatup">
-                                    <img src="./images/bn_supaisukennkyuujyo_1.jpg" alt="">
-                                </a>
-                                <h2>スパイスカレー</h2>
-                            </div>
-                            <div class="contents">
-                                <a href="./works_bn_detail.html" class="sp-img_w floatup">
-                                    <img src="./images/bn_deluxeburger1.jpg" alt="">
-                                </a>
-                                <h2>デラックスバーガー（POP風）</h2>
-                            </div>
+                    <div class="top_contents">
+                        <div class="ttl">
+                            <h2>おはなしする</h2>
+                            <p class="cursive">Contact</p>
+                            <div class="erase"></div>
+                            <div class="contact_line"></div>
                         </div>
-                        <div class="block">
-                            <div class="contents">
-                                <a href="./works_bn_detail.html" class="sp-img floatup">
-                                    <img src="./images/bn_deluxeburger2.jpg" alt="">
-                                </a>
-                                <h2>デラックスバーガー（高級感）</h2>
-                            </div>
-                            <div class="contents">
-                                <div class="sp-img_none">
-                                    <p>in production</p>
-                                </div>
-                                <h2 class="txt_none">カフェサイト（架空）</h2>
-                            </div>
+                        <div class="txt">
+                            <p>ご相談や励ましのお言葉など、<br>
+                                何でもお話できたらと思います。<br>
+                                お気軽にお問い合わせください。<br>
+                                右記フォームより必要事項を記入いただき、<br>
+                                「送信する」を押してください。</p>
                         </div>
+                        <form
+                            action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdQT8L3UAJMfiiDTRGbAAKqm935UD3J8gkRpPijM-KmUQ2-sQ/formResponse"
+                            method="post" target="hidden_iframe" onsubmit="submitted=true;" class="wrapper">
+                            <table class="contact-table">
+                                <tr>
+                                    <th>お名前</th>
+                                    <td>
+                                        <input type="text" name="entry.366340186" placeholder="山田　花子">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>メールアドレス</th>
+                                    <td>
+                                        <input type="email" name="entry.1131966218" placeholder="@">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>お問い合わせ内容</th>
+                                    <td>
+                                        <textarea name="entry.714382665" id=""></textarea>
+                                    </td>
+                                </tr>
+                            </table>
+                            <input class="submit" type="submit" value="送信する">
+
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
-
-        <!-- リンク -->
-
-        <section data-scroll-section class="scroll_section">
-
-            <div class="link">
-                <div class="wrapper">
-                    <a href="./contact.html" class="float">
-                        <div class="btn">
-                            <p class="en">CONTACT</p>
-                            <img src="./images/mail.svg">
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </section>
-
-
     </main>
     <script src="
-    https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js
-    "></script>
+https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js
+"></script>
     <script>
         (() => {
             document.addEventListener('DOMContentLoaded', () => {
@@ -186,19 +148,12 @@
                     tablet: {
                         direction: 'horizontal',
                         smooth: true,
-
                     },
                     smartphone: {
                         direction: 'horizontal',
                         smooth: true,
-
                     }
-
                 })
-
-
-
-                // ＝＝＝＝背景＝＝＝＝
 
                 const bg = document.querySelector('.bg')
                 const secondSection = document.querySelector('.second_section')
@@ -212,28 +167,70 @@
                         bg.style.opacity = opacity
                     }
                 })
+                function calculate() {
+                    const aboutLine = document.querySelector('.about_line')
+                    const firstSection = document.querySelector('.first_section')
+                    const secondCursive = document.querySelector('.second_cursive')
+
+                    const firstSectionX = firstSection.getBoundingClientRect().x + firstSection.getBoundingClientRect().right
+                    // console.log(firstSectionX)
+                    const secondCursiveX = secondCursive.getBoundingClientRect().x
+                    // console.log(secondCursiveX)
+                    const lineWidth = secondCursiveX - firstSectionX
+                    // console.log(lineWidth)
+                    if (window.matchMedia('(min-width:768px)')) {
+                        /**画面幅が768px以上のときの処理 */
+                        const lineWidth = secondCursiveX - firstSectionX + 82
+                        console.log(lineWidth)
+                    } else {
+                        /**画面幅が768px以上のときの処理 */
+                        const lineWidth = secondCursiveX - firstSectionX + 45
+                        console.log(lineWidth)
+                    }
+                    aboutLine.style.width = lineWidth + 'px'
+                }
+                calculate()
+                window.addEventListener('resize', () => {
+                    calculate()
+                })
+
+                const anchorLinks = document.querySelectorAll('a[href^=\\#]:not([href$=\\#])');
+
+                anchorLinks.forEach((anchorLink) => {
+                    let link = anchorLink.getAttribute('href');
+                    let target = document.querySelector(link);
+
+                    anchorLink.addEventListener('click', (e) => {
+                        e.preventDefault();
+                        e.stopPropagation();
+
+                        scroll.scrollTo(target);
+                    })
+                })
 
 
-            })
+
+
+            });
+
         })()
 
+
     </script>
+
     <script>
-        // $(function () {
-        //     $('.sp_btn').on('click', function () {
-        //         $('.sp_menu').fadeToggle();
-        //         $('.sp_btn').toggleClass('open');
-        //     })
-        // });
-
-        // SP版メニュー
-
         $(function () {
             const $effect = $('.fade-effect');
             const $menu = $('.sp_menu');
             $('.sp_btn').on('click', function () {
 
+                // $('.sp_menu').fadeToggle();
+                // $('.sp_menu').toggleClass('active')
                 $('.sp_btn').toggleClass('open');
+                // $('.header').toggleClass('open');
+                // 消したら背景色がなくなる
+                // $('.top_portfolioname').toggleClass('open');
+                // 消したら下の横長が表示されたままになる
 
                 if ($menu.is(':visible')) {
                     $effect.addClass('show');
@@ -250,8 +247,12 @@
                 }
             })
         });
-
     </script>
+    <script type="text/javascript">
+        let submitted = false;
+    </script>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display: none"
+        onload="if(submitted){window.location='THANKSページのURL';}"></iframe>
 
 </body>
 
