--- a/portfolio_ideta/works_hp_detail.html
+++ b/portfolio_ideta/works_hp_detail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IdetaKaori's Portfolio</title>
+    <title>Kaori's Portfolio</title>
     <link href="
     https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css
     " rel="stylesheet">
@@ -32,22 +32,24 @@
 
 <body>
     <header>
+
+        <!-- 右固定ナビゲーション -->
+
         <div class="header">
             <div class="wrapper">
                 <nav class="pc_nav">
-                    <li>
-                        <ul class="en"><a href="./index.html">TOP</a></ul>
-                        <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
-                        <ul class="en"><a href="./index.html">CONTACT</a></ul>
-                    </li>
-                    <div class="line"></div>
-
-                    <li>
-                        <ul class="en here"><a href="./works_hp.html">HP</a></ul>
-                        <ul class="en"><a href="./works_lp.html">LP</a></ul>
-                        <ul class="en"><a href="./works_bn.html">BANNER</a></ul>
-                        <ul class="en">WORKS</ul>
-                    </li>
+                    <ul>
+                        <li class="en here"><a href="./index.html">TOP</a></li>
+                        <li class="en"><a href="./about.html">ABOUT ME</a></li>
+                        <li class="en"><a href="#contact">CONTACT</a></li>
+                    </ul>
+                    <div class="line_vertical"></div>
+                    <ul>
+                        <li class="en"><a href="./works_hp.html">HP</a></li>
+                        <li class="en"><a href="./works_lp.html">LP</a></li>
+                        <li class="en"><a href="./works_bn.html">BANNER</a></li>
+                        <li class="en back">一覧に戻る</li>
+                    </ul>
                 </nav>
             </div>
             <div class="sp_btn"><span></span></div>
@@ -58,14 +60,14 @@
                     </div>
                     <div class="content">
                         <nav class="sp_nav">
-                            <li>
-                                <ul class="en"><a href="./index.html">TOP</a></ul>
-                                <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
-                                <ul class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></ul>
-                                <ul class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></ul>
-                                <ul class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></ul>
-                                <ul class="en"><a href="./index.html">CONTACT</a></ul>
-                            </li>
+                            <ul>
+                                <li class="en"><a href="./index.html">TOP</a></li>
+                                <li class="en"><a href="./about.html">ABOUT ME</a></li>
+                                <li class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></li>
+                                <li class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></li>
+                                <li class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></li>
+                                <li class="en"><a href="./contact.html">CONTACT</a></li>
+                            </ul>
                         </nav>
                         <div class="triangle_top"></div>
                         <div class="triangle_bottom"></div>
@@ -77,11 +79,20 @@
         </div>
     </header>
 
+    <!-- 左固定アニメーション -->
+
     <div class="top_portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
     </div>
+
+    <!-- 背景 -->
+
     <div class="bg"></div>
+
     <main data-scroll-container>
+
+        <!-- PC版 -->
+
         <section data-scroll-section class="scroll_section">
             <div class="pc_top wrapper section-inner">
                 <div class="container">
@@ -98,6 +109,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- SP版 -->
 
         <section data-scroll-section class="scroll_section second_section">
             <div class="sp_container section-inner">
@@ -116,12 +129,10 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="contents wrapper bottom-txt">
                         <div class="sp_ttl">
                             <h1>カフェサイト（架空）</h1>
                         </div>
-
                         <div class="list_left">
                             <div class="list_row">
                                 <ul>
@@ -129,45 +140,36 @@
                                     <li class="list_txt">２日</li>
                                 </ul>
                             </div>
-
                             <div class="list_row">
                                 <ul>
                                     <li class="list_ttl">担当範囲</li>
                                     <li class="list_txt">Webデザイン、コーディング（HTML・CSS）</li>
                                 </ul>
                             </div>
-
                             <div class="list_row">
                                 <ul>
                                     <li class="list_ttl">使用ツール</li>
                                     <li class="list_txt">Adobe Illustrator・Adobe photoshop</li>
                                 </ul>
                             </div>
-
-
                             <div class="list_row">
                                 <ul>
                                     <li class="list_ttl">ターゲット</li>
                                     <li class="list_txt">50〜60代の女性</li>
                                 </ul>
                             </div>
-
-
                             <div class="list_row">
                                 <ul>
                                     <li class="list_ttl">コンセプト</li>
                                     <li class="list_txt">ナチュラル、おしゃれ</li>
                                 </ul>
                             </div>
-
                             <div class="list_row">
                                 <ul>
                                     <li class="list_ttl">目的・課題</li>
                                     <li class="list_txt">ー</li>
                                 </ul>
                             </div>
-
-
                         </div>
                         <div class="point">
                             <h2>制作ポイント</h2>
@@ -187,41 +189,42 @@
             </div>
         </section>
 
+        <!-- PC版 ALL -->
+
         <section data-scroll-section class="scroll_section">
             <div class="pc_all section-inner">
                 <div class="allpage">
                     <p class="en">ALL PAGES</p>
-                    <div class="a">
+                    <div class="maxheight fadeInTrigger">
                         <img src="./images/hp_cafe_2.jpg" alt="">
                     </div>
-                    <div>
+                    <div class="fadeInTrigger">
                         <img src="./images/hp_cafe_3.jpg" alt="">
                     </div>
-                    <div class="a">
+                    <div class="maxheight fadeInTrigger">
                         <img src="./images/hp_cafe_4.jpg" alt="">
                     </div>
-                    <div>
+                    <div class="fadeInTrigger">
                         <img src="./images/hp_cafe_5.jpg" alt="">
                     </div>
-                    <div>
+                    <div class="fadeInTrigger">
                         <img src="./images/hp_cafe_6.jpg" alt="">
                     </div>
-                    <div>
+                    <div class="fadeInTrigger">
                         <img src="./images/hp_cafe_7.jpg" alt="">
                     </div>
-                    <div class="txt_wrapper">
+                    <div class="txt_wrapper fadeInTrigger">
                         <p class="en">RESPONSIVE</p>
                     </div>
-                    <div>
+                    <div class="fadeInTrigger">
                         <img src="./images/hp_cafe_8.jpg" alt="">
                     </div>
-                    <div>
+                    <div class="fadeInTrigger">
                         <img src="./images/hp_cafe_9.jpg" alt="">
                     </div>
-                    <div>
+                    <div class="fadeInTrigger">
                         <img src="./images/hp_cafe_10.jpg" alt="">
                     </div>
-
                 </div>
                 <div class="wrapper">
                     <a href="">
@@ -233,6 +236,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- SP版 ALL -->
 
         <section data-scroll-section class="scroll_section forth_section verticalscrolling">
             <div class="sp_all sliders_wrapper section-inner">
@@ -268,7 +273,6 @@
                         </a>
                     </div>
                 </div>
-
             </div>
         </section>
 
@@ -300,6 +304,13 @@
                     }
 
                 })
+
+
+
+
+
+
+
 
                 // ここから追加
 
@@ -333,7 +344,8 @@
                             end: '+=100%',//  セクション開始位置から100％分のスクロール距離
                             pin: inner,//.section-innerを代入する
                             pinSpacing: false,
-                            pinType: 'transform'
+                            pinType: 'transform',
+                            markers: true
                         })
 
                     } else {//  垂直方向スクロールセクションの場合（＝section自体は横スクロールで、その中のコンテンツsp_allpageのみ縦スクロール）
@@ -349,7 +361,8 @@
                             pin: inner,//.section-innerを代入する
                             pinSpacing: true,
                             pinType: 'transform',
-                            anticipatePin: 1
+                            anticipatePin: 1,
+                            markers: true
                         })
 
                         gsap.to(verticalscroll, {
@@ -366,7 +379,8 @@
                                 // start: 'top top',
                                 end: () => `+=${section.scrollHeight}`,
                                 // end: () => "+=" + document.querySelector(".data-scroll-section").offsetHeight,
-                                scurub: true
+                                scurub: true,
+                                markers: true
                             }
                         });
                     }
@@ -385,7 +399,8 @@
                         anticipatePin: 1,
                         pin: true,
                         pinSpacing: false,
-                        pinType: 'transform'
+                        pinType: 'transform',
+                        markers: true
                     }
                 });
 
@@ -410,31 +425,85 @@
                 })
 
 
-                const container = document.querySelector('.forth_section')
-                const slides = document.querySelectorAll('.slide')
-                const containerHeight = container.offsetHeight;
-                gsap.to(slides, {
-                    yPercent: -110 * (slides.length - 1),
-                    ease: "none",
-                    scrollTrigger: {
-                        // start: 'top top'
-                        trigger: container,
-                        pin: true,
-                        scurub: 1,
-                        end: () => '+= ${ containerHeight }',
-                        anticipatePin: 1,
-                        invalidateOnRefresh: true
-                    }
-                })
+                // const container = document.querySelector('.forth_section')
+                // const slides = document.querySelectorAll('.slide')
+                // const containerHeight = container.offsetHeight;
+                // gsap.to(slides, {
+                //     yPercent: -110 * (slides.length - 1),
+                //     ease: "none",
+                //     scrollTrigger: {
+                //         // start: 'top top'
+                //         trigger: container,
+                //         pin: true,
+                //         scurub: 1,
+                //         end: () => '+= ${ containerHeight }',
+                //         anticipatePin: 1,
+                //         invalidateOnRefresh: true
+                //     }
+                // })
+
+
+                // PC版のALLPAGESが右からフェードインする
+
+                // 動きのきっかけとなるアニメーションの名前を定義
+                function fadeAnime() {
+
+                    //ふわっと動くきっかけのクラス名と動きのクラス名の設定
+                    $('.fadeInTrigger').each(function () { //fadeInUpTriggerというクラス名が
+                        var elemPos = $(this).offset().left - 50; //要素より、50px左の
+                        console.log(elemPos)
+                        var scroll = $(window).scrollLeft();
+                        var windowWidth = $(window).width();
+                        if (scroll >= elemPos - windowWidth) {
+                            $(this).addClass('fadeIn');
+                            // 画面内に入ったらfadeInというクラス名を追記
+                        } else {
+                            $(this).removeClass('fadeIn');
+                            // 画面外に出たらfadeInというクラス名を外す
+                        }
+                    });
+                }
+                // 画面をスクロールをしたら動かしたい場合の記述
+                $(window).scroll(function () {
+                    fadeAnime();/* アニメーション用の関数を呼ぶ*/
+                });// ここまで画面をスクロールをしたら動かしたい場合の記述
+
+
             })
         })()
 
     </script>
     <script>
+        // $(function () {
+        //     $('.sp_btn').on('click', function () {
+        //         $('.sp_menu').fadeToggle();
+        //         $('.sp_btn').toggleClass('open');
+        //     })
+        // });
+
+
+        // SP版メニュー
+
         $(function () {
+            const $effect = $('.fade-effect');
+            const $menu = $('.sp_menu');
             $('.sp_btn').on('click', function () {
-                $('.sp_menu').fadeToggle();
+
                 $('.sp_btn').toggleClass('open');
+
+                if ($menu.is(':visible')) {
+                    $effect.addClass('show');
+                    setTimeout(function () {
+                        $effect.removeClass('show');
+                        $menu.hide();
+                    }, 500)
+                } else {
+                    $effect.addClass('show');
+                    setTimeout(function () {
+                        $effect.removeClass('show');
+                        $menu.show();
+                    }, 500)
+                }
             })
         });
 
