--- a/portfolio_ideta/works_hp.html
+++ b/portfolio_ideta/works_hp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IdetaKaori's Portfolio</title>
+    <title>Kaori's Portfolio</title>
     <link href="
     https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css
     " rel="stylesheet">
@@ -27,22 +27,25 @@
 </head>
 
 <body>
+
+    <!-- 右固定ナビゲーション -->
+
     <header>
         <div class="header">
             <div class="wrapper">
                 <nav class="pc_nav">
-                    <li>
-                        <ul class="en"><a href="./index.html">TOP</a></ul>
-                        <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
-                        <ul class="en"><a href="./index.html">CONTACT</a></ul>
-                    </li>
-
-                    <li>
-                        <ul class="en here"><a href="./works_hp.html">HP</a></ul>
-                        <ul class="en"><a href="./works_lp.html">LP</a></ul>
-                        <ul class="en"><a href="./works_bn.html">BANNER</a></ul>
-                        <ul class="en">WORKS</ul>
-                    </li>
+                    <ul>
+                        <li class="en here"><a href="./index.html">TOP</a></li>
+                        <li class="en"><a href="./about.html">ABOUT ME</a></li>
+                        <li class="en"><a href="#contact">CONTACT</a></li>
+                    </ul>
+                    <div class="line_vertical"></div>
+                    <ul>
+                        <li class="en"><a href="./works_hp.html">HP</a></li>
+                        <li class="en"><a href="./works_lp.html">LP</a></li>
+                        <li class="en"><a href="./works_bn.html">BANNER</a></li>
+                        <li class="en not_btn">WORKS</li>
+                    </ul>
                 </nav>
             </div>
             <div class="sp_btn">
@@ -55,14 +58,14 @@
                     </div>
                     <div class="content">
                         <nav class="sp_nav">
-                            <li>
-                                <ul class="en"><a href="./index.html">TOP</a></ul>
-                                <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
-                                <ul class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></ul>
-                                <ul class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></ul>
-                                <ul class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></ul>
-                                <ul class="en"><a href="./index.html">CONTACT</a></ul>
-                            </li>
+                            <ul>
+                                <li class="en"><a href="./index.html">TOP</a></li>
+                                <li class="en"><a href="./about.html">ABOUT ME</a></li>
+                                <li class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></li>
+                                <li class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></li>
+                                <li class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></li>
+                                <li class="en"><a href="./contact.html">CONTACT</a></li>
+                            </ul>
                         </nav>
                         <div class="triangle_top"></div>
                         <div class="triangle_bottom"></div>
@@ -73,14 +76,24 @@
 
         </div>
     </header>
+
+    <!-- 左固定アニメーション -->
+
     <div class="top_portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
     </div>
     <div class="bg"></div>
 
     <main data-scroll-container>
+
+        <!-- 一覧 -->
+
         <section data-scroll-section class="scroll_section">
+
+            <!-- PC版 -->
+
             <div class="pc_container wrapper">
+                <div class="scrolldown2"><span>Scroll</span></div>
                 <div class="content">
                     <img src="./images/hp_cafe_1.png">
                     <p class="ttl">カフェサイト（架空）</p>
@@ -105,6 +118,9 @@
                     </div>
                 </div>
             </div>
+
+            <!-- SP版 -->
+
             <div class="sp_container">
                 <div class="wrapper">
                     <div class="page_ttl">
@@ -144,6 +160,8 @@
             </div>
         </section>
 
+        <!-- リンク -->
+
         <section data-scroll-section class="scroll_section">
 
             <div class="link">
@@ -182,6 +200,11 @@
                     }
 
                 })
+
+
+
+                // ＝＝＝＝背景＝＝＝＝
+
                 const bg = document.querySelector('.bg')
                 const secondSection = document.querySelector('.second_section')
                 const secondSectionX = secondSection.getBoundingClientRect().x
@@ -201,12 +224,38 @@
 
     </script>
     <script>
+        // $(function () {
+        //     $('.sp_btn').on('click', function () {
+        //         $('.sp_menu').fadeToggle();
+        //         $('.sp_btn').toggleClass('open');
+        //     })
+        // });
+
+        // SP版メニュー
+
         $(function () {
+            const $effect = $('.fade-effect');
+            const $menu = $('.sp_menu');
             $('.sp_btn').on('click', function () {
-                $('.sp_menu').fadeToggle();
+
                 $('.sp_btn').toggleClass('open');
+
+                if ($menu.is(':visible')) {
+                    $effect.addClass('show');
+                    setTimeout(function () {
+                        $effect.removeClass('show');
+                        $menu.hide();
+                    }, 500)
+                } else {
+                    $effect.addClass('show');
+                    setTimeout(function () {
+                        $effect.removeClass('show');
+                        $menu.show();
+                    }, 500)
+                }
             })
         });
+
     </script>
 
 </body>
